--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,8 @@
   </div>
   
   <div class="form-group">
-    <%= f.label "Activate account?" %><%= f.check_box :status, class: 'checkbox' %>
+    <%= f.label "Activate account?" %>
+    <%= f.check_box :status, class: 'checkbox' %>
   </div>  
 
   <div class="form-group">
